画像を修正　名前等の情報を書き換え
Signed-off-by: 恥さらし <hazisarashi@gmail.com>

--- a/DarkCarbon.SkypeChatStyle/Contents/Resources/css/main.css
+++ b/DarkCarbon.SkypeChatStyle/Contents/Resources/css/main.css
@@ -1,5 +1,5 @@
 body {
-	font: normal 13px/20px "Helvetica Neue", Arial, sans-serif;
+	font: normal 13px/20px "Hiragino Kaku Gothic Pro", "Helvetica Neue", Arial, sans-serif;
 	color: #eee;
 }
 
